--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Suggests: knitr, rmarkdown, readxl
+VignetteBuilder: knitr
 Depends:
   dplyr,
   shiny,
-  ggplot2,
-  readr,
-  readxl
+  ggplot2
