--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Authors@R:
     person("Augustus", "Pendleton", , "arp277@cornell.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-9512-5812"))
 Description: I made this package to help people who want to use R but are a little nervous about calculating doubling times from their growth curves. This shiny app helps take you steps that could be confusing to new R users, like filtering their data, log-transforming their graphs to assess exponential phase, and calculating doubling times from log2-transformed data. 
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
